Stub project reading

--- a/data/themes/Axis/OUTPUT.html
+++ b/data/themes/Axis/OUTPUT.html
@@ -15,14 +15,59 @@
 <a class="link dim dark-gray f6 f5-ns dib pa3" href="{site.url}/blog.html">Blog</a>
     </div>
     </nav>
+    
     <article>
         <header class="bg-blue white sans-serif">
         <div class="mw9 center pa4 pt5-ns ph7-l">
             <h5 class="f6 ttu tracked">7 October, 2018</h5>
-            <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
-                <span class="bg-white lh-copy blue pa1 tracked-tight">So Long, and Thanks for the Templates</span>
+            <h3 class="f2 f1-m measure-narrow lh-title mv0">
+                <span class="bg-white lh-copy blue pa1 tracked-tight">Every single time</span>
             </h3>
-            <h4 class="f3 fw1 georgia i">A brief example of the templated site for busy people in 2018.</h4>
+            <h4 class="f3 fw1 georgia i">I'm running out of texts.</h4>
+        </div>
+        </header>
+        <div class="pa4 ph7-l georgia mw9-l center">
+            <p class="f5 f3-ns lh-copy measure georgia">
+            Every item in this array is a paragraph with HTML, as converted from Markdown.
+        </p>
+        <p class="f5 f3-ns lh-copy measure georgia">
+            I repeat Sturgeon's Revelation, which was wrung out of me after twenty years of wearying defense of science fiction against attacks of people who used the worst examples of the field for ammunition, and whose conclusion was that ninety percent of SF is crud. Using the same standards that categorize 90% of science fiction as trash, crud, or crap, it can be argued that 90% of film, literature, consumer goods, etc. is crap. In other words, the claim (or fact) that 90% of science fiction is crap is ultimately uninformative, because science fiction conforms to the same trends of quality as all other artforms.
+        </p>
+        <p class="f5 f3-ns lh-copy measure georgia">
+                <a class="link no-underline f4 fw7 dib hover-blue black" href="">Read More</a>
+            </p>
+        </div>
+    </article>
+    <article>
+        <header class="bg-blue white sans-serif">
+        <div class="mw9 center pa4 pt5-ns ph7-l">
+            <h5 class="f6 ttu tracked">7 October, 2018</h5>
+            <h3 class="f2 f1-m measure-narrow lh-title mv0">
+                <span class="bg-white lh-copy blue pa1 tracked-tight">Lorem Ipsum</span>
+            </h3>
+            <h4 class="f3 fw1 georgia i">To sit amet or not to sit amet?</h4>
+        </div>
+        </header>
+        <div class="pa4 ph7-l georgia mw9-l center">
+            <p class="f5 f3-ns lh-copy measure georgia">
+            Theodore Sturgeon was a science fiction author, critic, and the basis for Kurt Vonnegut's recurring character Kilgore Trout. He was prolific, authoring over 200 pieces himself and critiquing around 400 others.
+        </p>
+        <p class="f5 f3-ns lh-copy measure georgia">
+            Test much, eh?
+        </p>
+        <p class="f5 f3-ns lh-copy measure georgia">
+                <a class="link no-underline f4 fw7 dib hover-blue black" href="">Read More</a>
+            </p>
+        </div>
+    </article>
+    <article>
+        <header class="bg-blue white sans-serif">
+        <div class="mw9 center pa4 pt5-ns ph7-l">
+            <h5 class="f6 ttu tracked">7 October, 2018</h5>
+            <h3 class="f2 f1-m measure-narrow lh-title mv0">
+                <span class="bg-white lh-copy blue pa1 tracked-tight">Shmebulock</span>
+            </h3>
+            <h4 class="f3 fw1 georgia i">The best way to smell things.</h4>
         </div>
         </header>
         <div class="pa4 ph7-l georgia mw9-l center">
@@ -38,8 +83,12 @@
         <p class="f5 f3-ns lh-copy measure georgia">
             I repeat Sturgeon's Revelation, which was wrung out of me after twenty years of wearying defense of science fiction against attacks of people who used the worst examples of the field for ammunition, and whose conclusion was that ninety percent of SF is crud. Using the same standards that categorize 90% of science fiction as trash, crud, or crap, it can be argued that 90% of film, literature, consumer goods, etc. is crap. In other words, the claim (or fact) that 90% of science fiction is crap is ultimately uninformative, because science fiction conforms to the same trends of quality as all other artforms.
         </p>
-    </div>
+        <p class="f5 f3-ns lh-copy measure georgia">
+                <a class="link no-underline f4 fw7 dib hover-blue black" href="">Read More</a>
+            </p>
+        </div>
     </article>
+    
     <footer class="pa4 ph7-l white bg-blue sans-serif">
       <h5 class="f6 ttu tracked">© 2018 {{site.owner}}. Proudly powered by Desidia.</h5>
     </footer>
