--- a/data/themes/Axis/OUTPUT.html
+++ b/data/themes/Axis/OUTPUT.html
@@ -11,8 +11,8 @@
             <img src="http://tachyons.io/img/logo.jpg" class="dib w2 h2 br-100" alt="Example Site">
         </a>
         <div class="dtc v-mid w-75 tr">
-            <a class="link dim dark-gray f6 f5-ns dib pa3" href="{site.url}/index.html">Home</a>
-<a class="link dim dark-gray f6 f5-ns dib pa3" href="{site.url}/blog.html">Blog</a>
+            <a class="link dim dark-gray f6 f5-ns dib pa3" href="{{site.url}}/index.html">Home</a>
+<a class="link dim dark-gray f6 f5-ns dib pa3" href="{{site.url}}/blog.html">Blog</a>
     </div>
     </nav>
     
@@ -90,7 +90,7 @@
     </article>
     
     <footer class="pa4 ph7-l white bg-blue sans-serif">
-      <h5 class="f6 ttu tracked">© 2018 {{site.owner}}. Proudly powered by Desidia.</h5>
+      <h5 class="f6 ttu tracked">© 2018 {{site.owner}}. Proudly powered by Ligo.</h5>
     </footer>
 </body>
 </html>
