Allow child pages

--- a/data/themes/Axis/text.html
+++ b/data/themes/Axis/text.html
@@ -4,7 +4,7 @@
     {{> dependencies}}
 </head>
 <body>
-    {{> header_colored}}
+    {{> header}}
 	<div class="pa4 ph7-l georgia center">
 		<div class="f5 f3-ns lh-copy measure georgia">
 			{{{page.content}}}
