--- a/data/themes/Axis/blog.html
+++ b/data/themes/Axis/blog.html
@@ -7,9 +7,9 @@
 <body>
     {{> header}}
     
-    {{#pagination.items}}
+    {{#page.pagination.items}}
     {{> paginated_article}}
-    {{/pagination.items}}
+    {{/page.pagination.items}}
     
     {{> footer}}
 </body>
